fix width for display results on mobile

--- a/src/components/DisplayResults/display-results.css
+++ b/src/components/DisplayResults/display-results.css
@@ -4,7 +4,7 @@
 }
 
 .display-results{
-    max-width: 1400px;
+    width: 100%;
 }
 
 .display-thumbnails{
